fix some scrollbar and height handling, add login to nav, activate burger

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,6 @@ body, div {
     background-color: rgb(27,40,48);
     padding: 0 ;
 }
-a {
+.navbar-item {
     color: white;
 }
